[tool.poetry]
name = "dbt_sandbox"
version = "0.1.0"
description = ""
authors = ["Franco Alvarez <franco.alvarez@mercadolibre.cl>"]

[tool.poetry.dependencies]
python = "^3.11"
dbt-snowflake = "1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
